<resources>
    <string name="app_name">Calculator</string>
    <string name="bt_Clear">C</string>
    <string name="bt_Pow">aⁿ</string>
    <string name="bt_Raiz">√x</string>
    <string name="bt_Div">÷</string>
    <string name="bt_Mult">x</string>
    <string name="bt_Subt">-</string>
    <string name="bt_Add">+</string>
    <string name="bt_Equal">=</string>
    <string name="bt_Point">.</string>
    <string name="bt_Neg">+/-</string>
    <string name="bt_9">9</string>
    <string name="bt_8">8</string>
    <string name="bt_7">7</string>
    <string name="bt_6">6</string>
    <string name="bt_5">5</string>
    <string name="bt_4">4</string>
    <string name="bt_3">3</string>
    <string name="bt_2">2</string>
    <string name="bt_1">1</string>
    <string name="bt_0">0</string>
    <string name="Text_View_Expression">EXPRESSÃO</string>
    <string name="Text_View_Result">RESULTADO</string>
</resources>