<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="-5dp"
        android:text="work in progress"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/View_Expression"
        style="@style/View_Expression"
        android:text="@string/Text_View_Expression"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/View_Result"
        style="@style/View_Result"
        android:text="@string/Text_View_Result"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:text="HISTORICO"
            android:textColor="@color/white"
            android:background="@drawable/buttons_specials_clicked"
            android:layout_marginStart="1dp"
            android:layout_height="match_parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/open_parenthesis"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:text="("
            android:textColor="@color/white"
            android:background="@drawable/buttons_specials_clicked"
            android:layout_marginStart="30dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/closed_parenthesis"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:text=")"
            android:textColor="@color/white"
            android:background="@drawable/buttons_specials_clicked"
            android:layout_marginStart="11dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/field_backspace"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_specials_clicked"
            android:layout_marginStart="30dp"
            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:layout_marginStart="303dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backspace"
            app:tint="@color/white"
            />

    </FrameLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Clear"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Clear"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Pow"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Pow"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Raiz"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Raiz"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Div"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Div"/>

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_7"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_7"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_8"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_8"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_9"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_9"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Mult"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Mult"/>

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_4"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_4"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_5"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_5"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_6"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_6"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Subt"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Subt"/>

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_1"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_2"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_2"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_3"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_3"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Add"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Add"/>

        </TableRow>

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Neg"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Neg"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_0"
                style="@style/Numbers_Buttons"
                android:text="@string/bt_0"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Point"
                style="@style/Symbols_Buttons"
                android:text="@string/bt_Point"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_Equal"
                android:background="@drawable/button_equal_clicked"
                android:layout_margin="1dp"
                android:textColor="@color/white"
                android:text="@string/bt_Equal"/>

        </TableRow>

    </TableLayout>

</LinearLayout>

</ScrollView>